# EFG

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: build.yml
cli/: main.py
cli/data_preparation/nuscenes/: create_data.py  nuscenes2kitti.py
datasets/utils/: waymo_eval.py
docs/: conf.py  index.rst
docs/modules/: data.rst  index.rst
efg/config/: __init__.py  default.yaml
efg/config/gallary/: backbones.yaml
efg/data/: __init__.py  augmentations.py  augmentations3d.py  base_dataset.py  builder.py  db_sampler.py  detection_utils.py  prefetcher.py  registry.py  sampler.py  vis.py  voxel_generator.py
efg/engine/: __init__.py  hooks.py  launch.py  registry.py  trainer.py
efg/evaluator/: __init__.py  build.py  coco_evaluator.py  evaluator.py  fast_eval_api.py  nuscenes_evaluator.py  panoptic_evaluation.py  registry.py  waymo_evaluator.py
efg/geometry/: box_ops.py  box_ops_torch.py  point_cloud_ops.py  symeig3x3.py
efg/modeling/: registry.py  utils.py
efg/operators/: box_iou_rotated_diff.py  giou3d.py  iou3d_nms.py  iou_box3d.py  knn.py  ms_deform_attn.py  nms.py  point_normals.py  rotated_boxes.py  voxelize.py
efg/solver/: __init__.py  adafactor.py  lars_sgd.py  lr_schedulers.py  optimizers.py  registry.py
efg/structures/: pointclouds.py  utils.py
efg/utils/: __init__.py  catalog.py  checkpoint.py  checkpoint_utils.py  collect_env.py  d2_model_loading.py  distributed.py  download.py  events.py  file_io.py  history_buffer.py  logger.py  registry.py  timer.py
(+289 files in other folders)
