[metadata]
name = efg 
author = Benjin ZHU @ MMLab, EE Department, CUHK
description = An Efficient, Flexible, and General deep learning framework that retains minimal 
long_description = file: README.md 
keywords = research, pytorch, deep learning, object detection, 3d 
license = Apache License 2.0 
classifiers =
    Framework :: PyTorch 
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pillow>=6.2.2
    omegaconf
    portalocker
    tabulate
    numba>=0.48.0
    numpy<=1.23.5
    pyquaternion
    nuscenes-devkit
    psutil
    tomark

[options.entry_points]
console_scripts =
    efg_run = cli.main:main 
    efg_prepare = cli.prepare:main 

[options.packages.find]
include = efg

[isort]
line_length = 120
multi_line_output = 3
balanced_wrapping = True
known_myself = efg
known_data = nuscenes,waymo_open_dataset,coco,lvis,pycocotools,panopticapi
known_data_processing = cv2,numpy,scipy,numba,pillow,PIL,omegaconf,portalocker,tqdm,pyquaternion,termcolor,tabulate,fire,easydict,shapely,tabulate,termcolor
known_deeplearning = torch,torchvision,tensorflow,spconv
sections = FUTURE,STDLIB,FIRSTPARTY,DATA_PROCESSING,DATA,DEEPLEARNING,MYSELF,LOCALFOLDER,THIRDPARTY

[flake8]
ignore = W503, W504, E221, C901, E722, E741, E731, E402, E704, E203
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = build,__init__.py
